fix FindBugs issue: DM_NUMBER_CTOR
svn path=/trunk/; revision=46308


Former-commit-id: a1620f6c5c22d01fed7a251b292252425f4ba618